--- a/knownprojects_build/python/requirements.txt
+++ b/knownprojects_build/python/requirements.txt
@@ -1,5 +1,6 @@
-pandas
-sqlalchemy
-networkx
-python-dotenv
-cartoframes
+pandas==1.0.3
+sqlalchemy==1.3.15
+networkx==2.4
+python-dotenv==0.12.0
+cartoframes==1.0.1
+psycopg2-binary==2.8.5
