--- a/knownprojects_build/pyproject.toml
+++ b/knownprojects_build/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.9"
 geopandas = "^0.8.2"
 xlrd = "^2.0.1"
 openpyxl = "^3.0.6"
+python-dotenv = "^0.15.0"
+SQLAlchemy = "^1.3.23"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 
