--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,28 @@
 name: Build
-on: [push]
-jobs:
-  skip:
-    name: Build and test
-    runs-on: ubuntu-latest
-    if: "contains(github.event.head_commit.message, '[build]')"
-    steps:
-      - run: echo "${{ github.event.head_commit.message }}"    
-  Build:
+on:
+  push:
+  workflow_dispatch:
+  
+jobs: 
+  build:
+    if: contains(github.event.head_commit.message, '[build]')
     name: Building ...
-    needs: skip
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       RECIPE_ENGINE: ${{ secrets.RECIPE_ENGINE }}
       BUILD_ENGINE: ${{ secrets.BUILD_ENGINE }}
       EDM_DATA: ${{ secrets.EDM_DATA }}
+      AWS_S3_ENDPOINT: ${{ secrets.DO_S3_ENDPOINT }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.DO_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v2
       - name: install dependencies ...
         run: |
-          sudo apt update
-          sudo apt install -y curl zip
-
-          sudo tee /etc/apt/sources.list.d/pgdg.list <<END
-          deb http://apt.postgresql.org/pub/repos/apt/ bionic-pgdg main
-          END
-
-          # get the signing key and import it
-          curl -O https://www.postgresql.org/media/keys/ACCC4CF8.asc
-          sudo apt-key add ACCC4CF8.asc
-
-          sudo apt update
-          sudo apt install -y postgresql-client-11
-          sudo apt autoremove
-
           curl -O https://dl.min.io/client/mc/release/linux-amd64/mc
           chmod +x mc
           sudo mv ./mc /usr/bin
-        #   mc config host add spaces $AWS_S3_ENDPOINT $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api S3v4
+          mc config host add spaces $AWS_S3_ENDPOINT $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api S3v4
 
       - name: 1. dataloading ..
         working-directory: knownprojects_build
