--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,18 @@ jobs:
             submodules: true
             ssh-key: ${{ secrets.SSH_KEY }}
             persist-credentials: true
-            
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
       - name: install dependencies ...
         run: |
           curl -O https://dl.min.io/client/mc/release/linux-amd64/mc
           chmod +x mc
           sudo mv ./mc /usr/bin
           mc config host add spaces $AWS_S3_ENDPOINT $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api S3v4
+          python3 -m pip install -r knownprojects_build/requirements.txt
 
       - name: 1. dataloading ..
         working-directory: knownprojects_build
