--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       AWS_S3_ENDPOINT: ${{ secrets.DO_S3_ENDPOINT }}
       AWS_ACCESS_KEY_ID: ${{ secrets.DO_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SECRET_ACCESS_KEY }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
         with: 
@@ -40,6 +41,7 @@ jobs:
 
       - name: install dependencies ...
         run: |
+          sudo apt install -y gdal-bin
           curl -O https://dl.min.io/client/mc/release/linux-amd64/mc
           chmod +x mc
           sudo mv ./mc /usr/bin
@@ -54,4 +56,7 @@ jobs:
         working-directory: knownprojects_build
         run: ./02_build.sh
 
-   
+      - name: 3. export ...
+        working-directory: knownprojects_build
+        run: ./03_export.sh
+        
