--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,18 @@ name: Build
 on:
   push:
   workflow_dispatch:
-  
+    inputs:
+      database:
+        description: 'which database?'
+        required: true
+        default: 'github'
 jobs: 
-  build:
+  build_github:
     if: >- 
-      contains(github.event.head_commit.message, '[build]') ||
-      github.event_name == 'workflow_dispatch'
+      github.event.inputs.database == 'github' && (
+        contains(github.event.head_commit.message, '[build]') ||
+        github.event_name == 'workflow_dispatch'
+      )
     name: Building ...
     runs-on: ubuntu-20.04
     services:
@@ -59,4 +65,52 @@ jobs:
       - name: 3. export ...
         working-directory: knownprojects_build
         run: ./03_export.sh
+
+  build_edm:
+    if: >- 
+      github.event.inputs.database == 'edm' && (
+        contains(github.event.head_commit.message, '[build]') ||
+        github.event_name == 'workflow_dispatch'
+      )
+    name: Building ...
+    runs-on: ubuntu-20.04
+    env:
+      BUILD_ENGINE: ${{ secrets.BUILD_ENGINE }}
+      AWS_S3_ENDPOINT: ${{ secrets.DO_S3_ENDPOINT }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.DO_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SECRET_ACCESS_KEY }}
+      GH_PAT: ${{ secrets.GH_PAT }}
+    steps:
+      - uses: actions/checkout@v2
+        with: 
+            submodules: true
+            ssh-key: ${{ secrets.SSH_KEY }}
+            persist-credentials: true
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+
+      - name: install dependencies ...
+        run: |
+          sudo apt install -y gdal-bin
+          curl -O https://dl.min.io/client/mc/release/linux-amd64/mc
+          chmod +x mc
+          sudo mv ./mc /usr/bin
+          mc config host add spaces $AWS_S3_ENDPOINT $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api S3v4
+          python3 -m pip install -r knownprojects_build/requirements.txt
+
+      - name: 1. dataloading ..
+        working-directory: knownprojects_build
+        run: ./01_dataloading.sh
+
+      - name: 2. build ...
+        working-directory: knownprojects_build
+        run: ./02_build.sh
+
+      - name: 3. export ...
+        working-directory: knownprojects_build
+        run: ./03_export.sh
+        
+
         
