--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         contains(github.event.head_commit.message, '[build]') ||
         github.event_name == 'workflow_dispatch'
       )
-    name: Building ...
+    name: Building in Github database
     runs-on: ubuntu-20.04
     services:
       postgres:
@@ -72,7 +72,7 @@ jobs:
         contains(github.event.head_commit.message, '[build]') ||
         github.event_name == 'workflow_dispatch'
       )
-    name: Building ...
+    name: Building in EDM database
     runs-on: ubuntu-20.04
     env:
       BUILD_ENGINE: ${{ secrets.BUILD_ENGINE }}
@@ -81,6 +81,22 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SECRET_ACCESS_KEY }}
       GH_PAT: ${{ secrets.GH_PAT }}
     steps:
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DO_PAT }}
+
+      - name: Compute info and add to firewall
+        id: firewall
+        run: |
+          IP=$(curl https://api.ipify.org)
+          FIREWALL=$(doctl compute firewall ls -o json | jq -r '.[] | select(.name == "edm-firewall") | .id')
+          RULE="protocol:tcp,ports:all,address:$IP"
+          doctl compute firewall add-rules $FIREWALL --inbound-rules $RULE
+          
+          echo "FIREWALL=$FIREWALL">> $GITHUB_ENV          
+          echo "RULE=$RULE">> $GITHUB_ENV
+
       - uses: actions/checkout@v2
         with: 
             submodules: true
@@ -112,5 +128,7 @@ jobs:
         working-directory: knownprojects_build
         run: ./03_export.sh
         
-
+      - name: Remove IP from firewall
+        if: always()
+        run: doctl compute firewall remove-rules $FIREWALL --inbound-rules $RULE
         
