--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.DO_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SECRET_ACCESS_KEY }}
       GH_PAT: ${{ secrets.GH_PAT }}
+      AUTHOR: Data Engineering
     steps:
       - uses: actions/checkout@v2
         with: 
