--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,7 +79,7 @@ jobs:
       - name: 4. comment on PR
         uses: actions/github-script@v3
         with: 
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GH_PAT }}
           script: |
             github.issues.createComment({
               issue_number: ${{ steps.export.outputs.issue_number }},
