--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
       
       - name: 4. comment on PR
         uses: actions/github-script@v3
-        if: github.event.inputs.export == 'yes'
+        if: github.event.inputs.export == 'yes' && github.event.inputs.comments != ''
         with: 
           github-token: ${{ secrets.GH_PAT }}
           script: |
