--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "knownprojects_build/data"]
-	path = knownprojects_build/data
+[submodule "data"]
+	path = data
 	url = git@github.com:NYCPlanning/db-knownprojects-data.git
