--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,8 @@ on:
         required: false
         default: ''
 
-jobs: 
+jobs:
   build:
-    if: >- 
-      contains(github.event.head_commit.message, '[build]') ||
-      github.event_name == 'workflow_dispatch'
     name: Building in Github database
     runs-on: ubuntu-20.04
     services:
@@ -52,8 +49,7 @@ jobs:
 
       - name: Update Submodule
         if: github.event.inputs.update_submodule == 'yes'
-        run: |
-          git submodule update --remote
+        run: git submodule update --remote
          
       - uses: actions/setup-python@v2
         with:
@@ -66,7 +62,7 @@ jobs:
           chmod +x mc
           sudo mv ./mc /usr/bin
           mc config host add spaces $AWS_S3_ENDPOINT $AWS_ACCESS_KEY_ID $AWS_SECRET_ACCESS_KEY --api S3v4
-          python3 -m pip install -r knownprojects_build/requirements.txt
+          python3 -m pip install -r requirements.txt
 
       - name: 1. dataloading ..
         run: ./kpdb.sh dataloading
