--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,12 +72,8 @@ jobs:
 
       - name: 3. export ...
         id: export
-        if: github.event.inputs.export == 'yes'
+        if: github.event.inputs.export == 'yes' || github.ref == 'refs/heads/dev'
         run: ./kpdb.sh export ${{ github.event.sender.login }}
-      
-      - name: 4. archive ...
-        if: github.ref == 'refs/heads/dev'
-        run: ./kpdb.sh archive
 
       - name: 4. comment on PR
         uses: actions/github-script@v3
