--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,19 +41,19 @@ jobs:
       GH_PAT: ${{ secrets.GH_PAT }}
       AUTHOR: Data Engineering
     steps:
-      - name: Install SSH key
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.SSH_KEY }}
-          #name: id_rsa # optional
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
-          #config: ${{ secrets.CONFIG }} # ssh_config; optional
-          if_key_exists: fail
-          
+      # - name: Install SSH key
+      #   uses: shimataro/ssh-key-action@v2
+      #   with:
+      #     key: ${{ secrets.SSH_KEY }}
+      #     #name: id_rsa # optional
+      #     known_hosts: ${{ secrets.KNOWN_HOSTS }}
+      #     #config: ${{ secrets.CONFIG }} # ssh_config; optional
+      #     if_key_exists: fail
+
       - uses: actions/checkout@v2
         with: 
             submodules: true
-            ssh-key: ${{ secrets.SSH_KEY }}
+            # ssh-key: ${{ secrets.SSH_KEY }}
             persist-credentials: true
 
       - name: Update Submodule
