--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       - uses: actions/checkout@v2
         with: 
             submodules: true
-            # ssh-key: ${{ secrets.SSH_KEY }}
+            ssh-key: ssh-keyscan github.com
             persist-credentials: true
 
       - name: Update Submodule
