--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         with: 
             submodules: true
             #ssh-key: ssh-keyscan github.com
-            token: ${{ secrets.GH_PAT }}
+            token: ${{ secrets.TD_PAT }}
             persist-credentials: true
 
       - name: Update Submodule
